# scrapeprobe

./: .gitignore  ARCHITECTURE.md  LICENSE  NOTICE  README.md  RESEARCH.md  pyproject.toml
examples/sample-reports/: README.md
examples/sample-reports/cra-charity-registry/: REPORT.md  report.json
examples/sample-reports/firmen-wko-at/: REPORT.md  report.json
examples/sample-reports/opentender-eu/: REPORT.md  report.json
src/scrapeprobe/: __init__.py  __main__.py  cli.py  dogfood.py  models.py  probe.py
src/scrapeprobe/data/: antibot_signatures.json  bulkdata_patterns.json  techstack.json  tos_keywords.json
src/scrapeprobe/probes/: antibot.py  bulkdata.py  discovery.py  jurisdiction.py  robots.py  sampling.py  sitemap.py  techstack.py  tos.py
src/scrapeprobe/reporting/: json.py  markdown.py
src/scrapeprobe/utils/: http.py  url.py
tests/: conftest.py  test_antibot_signatures.py  test_discovery.py  test_dogfood.py  test_report_render.py  test_robots_parser.py  test_sitemap.py  test_techstack.py  test_url_utils.py
